rimozione parte di bootstrap

--- a/ClientApp/public/manifest.json
+++ b/ClientApp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "wise_catalog",
-  "name": "wise_catalog",
+  "short_name": "WiseCatalog",
+  "name": "WiseCatalog",
   "icons": [
     {
       "src": "favicon.ico",
