--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -17,7 +17,8 @@
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "react-editext": "3.2.1"
   },
   "scripts": {
     "start": "rimraf ./build && react-scripts start",
