--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -3,22 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.3.2",
-    "@material-ui/icons": "^3.0.1",
-    "bootstrap": "^3.3.7",
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
+    "@material-ui/styles": "^4.5.0",
     "material-ui": "^0.20.2",
-    "react": "^16.3.0",
-    "react-bootstrap": "^0.31.5",
-    "react-dom": "^16.3.0",
-    "react-redux": "^5.0.6",
-    "react-router-bootstrap": "^0.24.4",
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
+    "react-editext": "3.8.1",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.8",
+    "connected-react-router": "6.5.2",
     "react-scripts": "1.0.17",
-    "redux": "^3.7.2",
+    "redux": "4.0.4",
     "redux-thunk": "^2.2.0",
-    "rimraf": "^2.6.2",
-    "react-editext": "3.2.1"
+    "rimraf": "^2.6.2"
   },
   "scripts": {
     "start": "rimraf ./build && react-scripts start",
