--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "Connection": "Server=(localdb)\\mssqllocaldb;Database=wisecatalog;Trusted_Connection=True;",
+  "Connection": "Server=(localdb)\\MSSQLLocalDB;Database=wisecatalog;Trusted_Connection=True;",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
