--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -5,16 +5,16 @@
   "dependencies": {
     "@material-ui/core": "^3.3.2",
     "@material-ui/icons": "^3.0.1",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^3.4.1",
     "material-ui": "^0.20.2",
     "react": "^16.3.0",
     "react-bootstrap": "^0.31.5",
-    "react-dom": "^16.3.0",
+    "react-dom": "^16.13.1",
     "react-redux": "^5.0.6",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^3.4.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.2"
@@ -24,5 +24,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
