--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.Secrets.json
+*.secrets.json
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
