--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,7 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "StorageAccountConnectionString": "",
+  "Api": "WiseCatalog.Data.SqlServer.SqlServerApplicationDbContext"
 }
